# TermPaper

ReferenceBook/: Account.cpp  Account.h  CMakeLists.txt  Contact.cpp  Contact.h  ContactBook.cpp  ContactBook.h  FileManager.cpp  README.md  Serializable.cpp  Serializable.h  UserManual.txt  main.cpp
ReferenceBook/Enums/: Color.h  KeyCode.h  Month.h
ReferenceBook/SampleProject/Accounts/: User.txt
ReferenceBook/System/Headers/: Account.h  Contact.h  ContactBook.h  Date.h  FileManager.h  KeySettings.h  Serializable.h  Tag.h  TimeManager.h
ReferenceBook/System/Source/: Account.cpp  Contact.cpp  ContactBook.cpp  Date.cpp  FileManager.cpp  KeySettings.cpp  Serializable.cpp  Tag.cpp  TimeManager.cpp
ReferenceBook/UI/Headers/: AddContactMenu.h  Button.h  ConsoleManager.h  ContactButton.h  ContactInfoMenu.h  ContactMenu.h  DeleteContactMenu.h  EditContactMenu.h  Menu.h  Object.h  SortedContactMenu.h  TimeButton.h  UserManualMenu.h  Visual.h
ReferenceBook/UI/Source/: AddContactMenu.cpp  Button.cpp  ConsoleManager.cpp  ContactInfoMenu.cpp  ContactMenu.cpp  DeleteContactMenu.cpp  EditContactMenu.cpp  Menu.cpp  Object.cpp  SortedContactMenu.cpp  TimeButton.cpp  UserManualMenu.cpp  Visual.cpp
